fix usability (click area, spacing and visibility) of place order hide button

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -103,6 +103,10 @@ label {
   }
 }
 
+input.form-control{
+  font-size: 16px;
+}
+
 //Modals
 .modal-title {
   width: 100%;
@@ -213,6 +217,11 @@ label {
   }
 }
 
+@media screen and (max-width: 26rem){
+  html{
+    font-size: 15px;
+  }
+}
 
 
 @media (prefers-reduced-motion: no-preference) {
