--- a/frontend/src/Theme.scss
+++ b/frontend/src/Theme.scss
@@ -75,6 +75,8 @@ $btn-border-radius-lg: 5rem!default;
 $btn-border-radius-sm: 5rem!default;
 $input-btn-padding-x: 1.5rem !default;
 $input-padding-x: .75rem !default;
+$input-btn-font-size: 16px!default;
+$btn-font-size: 1rem!default;
 
 
 /* import bootstrap to set changes */
